@@ -38,7 +38,7 @@
  
 #define VERSION_MAJOR	3
 #define VERSION_MINOR   4
-#define VERSION_PATCH   0
+#define VERSION_PATCH   1
 
 /*
  * This value specifies the suffix to the version info sent to the metaserver.
